fixed font-size in recipe css
text was too small on mobile

--- a/styles/recipeStyle.css
+++ b/styles/recipeStyle.css
@@ -23,6 +23,7 @@ img {
 
 p, ul, ol {
   margin: 10px;
+  font-size: 24px;
   font-family: "Forum", serif;
   font-weight: 400;
   font-style: normal;
